<resources>
    <string name="app_name">My School</string>
    <string name="title_activity_main">My School</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hello">Hello!</string>
    <string name="school_curr_module_name">SchoolCurriculum</string>
	<!-- Module: LostAndFound-->
    <string name="hello_blank_fragment">Lost &amp; Found</string>
    <string name="report_lost_item_title">Report a lost item</string>
    <string name="report_found_item_title">Post an item</string>
    <string name="item_type_text">Item Type: </string>
    <string name="desc_text">Description: </string>
    <string name="date_lost_text">Date Lost: </string>
    <string name="date_found_text">Date Found: </string>
    <string name="place_found_text">Place Found: </string>
    <string name="place_lost_text">Place Lost: </string>
    <string name="name_text">Name: </string>
    <string name="class_text">Class: </string>
    <string name="Section_text">Section: </string>
    <string name="claim_item_button">Claim Item</string>
    <string name="found_item_button">Item Found</string>
    <string-array name="items_array">
        <item>Mobile</item>
        <item>Pencil Box</item>
    </string-array>
</resources>
